Move flash messages to header where they will always be visible and fix colors for black header

--- a/pskb_website/static/css/base.css
+++ b/pskb_website/static/css/base.css
@@ -413,6 +413,18 @@ a, a:visited, a:hover, a:focus {
     text-align: center;
 }
 
+#header-black .bg-danger {
+    color: #000000;
+}
+
+#header-black .bg-info {
+    color: #000000;
+}
+
+#header-black .bg-warning {
+    color: #000000;
+}
+
 #editor-section {
     margin-top: 50px;
 }
